--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "md5": "^2.3.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-burger-menu": "^3.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
